package funkypanda;

option java_package = "funkypanda.proto";
option java_outer_classname = "UserIdProtos";

message UserId {
	required int32 userID = 1;
}